# -NeuralForge

./: .gitignore  AGNT_NEUROADAPTIVE.py  CHANGELOG.md  README.md  analyze_tool_usage.py  apply_fixes.py  auto_evo.py  build_neural_tools.py  dashboard.html  dashboard_data.json  dashboard_live.html  evo_results.json  exec_data.json  fix_workflows.py  integrate_neural.py  neural_tools.json  pyproject.toml  run_all_tests.py  run_evo_cycle.py  run_evo_real.py  run_full_evolution.py  run_smart_real.py  run_tests.py  serve_dashboard.py  test_analyzer.py  test_evo.py  test_learner.py  test_pattern_engine.py  test_smart.py
data/: agnt_executions.json  real_benchmark_report.json
docs/: TESSERACT_PATHWAY_NETWORK.md  TESSERACT_PATHWAY_NETWORK_v0_2.md  TESSERACT_PATHWAY_NETWORK_v0_3.md  TESSERACT_PATHWAY_NETWORK_v0_4.md  TESSERACT_PATHWAY_NETWORK_v0_5.md  TESSERACT_PATHWAY_NETWORK_v0_6.md  TESSERACT_PATHWAY_NETWORK_v0_7.md  TESSERACT_PATHWAY_NETWORK_v0_8.md  TESSERACT_PATHWAY_NETWORK_v0_9.md  TESSERACT_PATHWAY_NETWORK_v1_0.md  TESSERACT_PATHWAY_NETWORK_v1_0_1.md  TESSERACT_PATHWAY_NETWORK_v1_1.md  TESSERACT_PATHWAY_NETWORK_v1_10.md  TESSERACT_PATHWAY_NETWORK_v1_11.md  TESSERACT_PATHWAY_NETWORK_v1_12.md  TESSERACT_PATHWAY_NETWORK_v1_13_1.md  TESSERACT_PATHWAY_NETWORK_v1_13_2.md  TESSERACT_PATHWAY_NETWORK_v1_13_COMPRESSED.md  TESSERACT_PATHWAY_NETWORK_v1_14.md  TESSERACT_PATHWAY_NETWORK_v1_15.md  TESSERACT_PATHWAY_NETWORK_v1_16.md  TESSERACT_PATHWAY_NETWORK_v1_2.md  TESSERACT_PATHWAY_NETWORK_v1_3.md  TESSERACT_PATHWAY_NETWORK_v1_4.md  TESSERACT_PATHWAY_NETWORK_v1_5.md  (+6 more)
(+159 files in other folders)
