[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralforge"
version = "2.5.0"
description = "NeuralForge v2.5 — Agent-Native Neural Network Forge with 16 AGNT marketplace tools, auto-evolution, and self-improving workflows."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.8.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]
training = ["wandb>=0.16.0", "tensorboard>=2.15.0"]
optimize = ["optuna>=3.5.0"]
export = ["onnx>=1.15.0", "safetensors>=0.4.0"]

[project.scripts]
neuralforge = "neuralforge.cli:app"

[tool.setuptools.packages.find]
include = ["neuralforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
